# anfis

./: .pre-commit-config.yaml  LICENCE.md  README.md  app.py  pyproject.toml  setup.cfg
anfis/: __init__.py  interpretation.py  model.py
anfis/layers/: __init__.py  fuzzy.py  inference.py  interpolation.py
anfis/membership_functions/: __init__.py  base.py  bell.py  gaussian.py  piecewise_linear.py
