[tool.poetry]
name = "anfis"
version = "0.2.0"
description = "This is an implementation of the ANFIS using the PyTorch framework"
authors = ["Hikaru Seki <hikasenyan@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
torch = { version = "^1.13.1", platform = "linux" }
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
mypy = "^0.991"
isort = "^5.11.4"
pre-commit = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
py_version = 310
profile = "black"
line_length = 120
include_trailing_comma = true
multi_line_output = 3
skip_gitignore= true
use_parentheses = true
